[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Environment/GameplayMusic.gd" type="Script" id=1]
[ext_resource path="res://Assets/Music/level-section-A.wav" type="AudioStream" id=2]
[ext_resource path="res://Assets/Music/level-section-B.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/Music/level-section-C.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/Music/level-section-D.wav" type="AudioStream" id=5]

[node name="GameplayMusic" type="Node"]
script = ExtResource( 1 )

[node name="MusicA" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
bus = "Music"

[node name="MusicB" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "Music"

[node name="MusicC" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "Music"

[node name="MusicD" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "Music"

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
